--- a/sass/components/_overlaying-navigation.scss
+++ b/sass/components/_overlaying-navigation.scss
@@ -14,6 +14,7 @@
         background-color: $color-light-transparent;
         backdrop-filter: blur(.2px);
     }
+
     &__checkbox:checked ~ &__nav{
         visibility: visible;
         opacity:1;
@@ -26,6 +27,7 @@
         &::after{
             top:50%;
             left:50%;
+            background-color: $color-black;
         }
         &::after{
             transform:translate(-50%,-50%) rotate(135deg);
@@ -48,6 +50,9 @@
         border-radius: 50%;
         text-align: center;
         cursor:pointer;
+        @include respond('tab-generic'){
+            top:0.5rem;
+        }
     }
     &__icon{
         position:relative;
@@ -61,6 +66,14 @@
         background-color:$color-black;
         height:2px;
         transition:transform .3s, top .1s, left .1s,background-color .1s;
+        }
+
+        &--white{
+            &,
+            &::before,
+            &::after{
+            background-color:$color-white;
+            }   
         }
 
         &::before,
