--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -21,6 +21,10 @@
             top:-2%;
             right: 0;
             z-index: $z-background-layer;
+            
+            @include respond('tab-land'){
+                width:50vw;
+            }
         }
     }
 }
