--- a/sass/components/_page-notch.scss
+++ b/sass/components/_page-notch.scss
@@ -8,7 +8,7 @@
     border-radius: 0 0 30px 30px;
     text-align: center;
     z-index: $z-background-layer;
-    transform:translate(-50%,50%);
+    transform:translate(-50%,70%);
     max-width: 30%;
 
     @include respond('tab-port'){
@@ -30,9 +30,19 @@
         width:100%;
         text-wrap: nowrap;
 
+        @include respond('big-laptop'){
+            font-size:$text-h2-sm;
+            letter-spacing: 6px;
+        }
+
         @include respond('tab-port'){
             font-size:$text-h2-sm;
             letter-spacing: 6px;
+        }
+
+        @include respond('phone-med'){
+            font-size:$text-large;
+            letter-spacing: 5px;
         }
     }
     &__sub-heading{
@@ -50,6 +60,10 @@
         font-weight: 600;
         letter-spacing:2px;
         width:100%;
+        @include respond('phone-med'){
+            font-size:$text-small-med-med-med;
+            letter-spacing: 2px;
+        }
     }
     &__sup-text{
         display:inline-block;
@@ -60,15 +74,46 @@
         width:100%;
         color:$color-purple;
         text-transform: uppercase;
+        @include respond('phone-med'){
+            font-size: $text-small-med;
+        }
     }
 
     &--med{
         transform:translate(-50%,70%);
+        @include respond('tab-port'){
+            max-width: 40%;
+        }
+        @include respond('phone'){
+            max-width: fit-content;
+        }
         .page-notch__heading{
             font-size: $text-h2-sm;
+            @include respond('big-laptop'){
+                font-size: $text-large;
+                letter-spacing: 5px;
+            }
+            @include respond('tab-land'){
+                font-size: $text-med;
+                letter-spacing: 4px;
+            }
+            @include respond('phone-med'){
+                letter-spacing: 3px;
+                padding:0 1.5rem;
+            }
         }
         .page-notch__sub-heading{
             font-size: $text-med-small;
+            @include respond('big-laptop'){
+                font-size: $text-small;
+                letter-spacing: 5px;
+            }
+            @include respond('tab-land'){
+                letter-spacing: 4px;
+            }
+            @include respond('phone-med'){
+                letter-spacing: 3px;
+            }
         }
         .page-notch__sub-text{
             font-size: $text-small-med-med-med;
