--- a/sass/pages/_blog.scss
+++ b/sass/pages/_blog.scss
@@ -14,6 +14,10 @@
         padding:20rem 0;
         overflow: hidden;
 
+        @include respond('tab-land'){
+            padding:14rem 0;
+        }
+
         .paragraph{
             &:not(:last-child){
                 padding-bottom: 2rem;
@@ -24,11 +28,23 @@
             position:absolute;
             top:-17%;
             left:0;
+            @include respond('phone'){
+                top:-2%;
+                width:35rem;
+            }
+            @include respond('phone-med'){
+                width:25rem;
+            }
         }
         &__wave-bottom-right{
             position:absolute;
             bottom:-15%;
             right: 0;
+            @include respond('phone'){
+                width:35rem;
+                bottom:-4%;
+            }
+
         }
     }
 
@@ -36,6 +52,11 @@
         position:relative;
         background-color: $color-green;
         padding-top:15rem;
+        margin-bottom: -1rem;
+
+        @include respond('phone'){
+            padding-top:9rem;
+        }
 
         .content-items__decorative-text{
             &::before{
